Fixed styling on collapsed nav search

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,6 +39,8 @@ div.container
 
 form#search-results 
 {
+    margin-bottom: 5px;
+    
     button.btn.btn-primary
     {
         margin-top: 0;
